Bump to Java 21, Gradle 8.9, dependency update + minor Java21 codestyle (#93)